mylang/tests/success/0.pas
program
var i: int;
begin

i := 1;
case(i) of
    2,1: writeln(11)
    3,4: writeln(22)
end;

i := 2;
case(i) of
    2,1: writeln(11)
    3,4: writeln(22)
end;

i := 3;
case(i) of
    2,1: writeln(11)
    3,4: writeln(22)
end;

i := 4;
case(i) of
    2,1: writeln(11)
    3,4: writeln(22)
end;

i := 4;
case(i) of
    1,2: writeln(11)
    4,3: writeln(22)
end

end@

