mylang/tests/fail/6.pas
program
var i: int;
begin

i := 1;
case(i) of
    2,1: writeln(11)
    ,4: writeln(22)
end

end@


